# trait2gene

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.md  installation.md  quickstart.md
docs/source/_static/: custom.css
docs/source/getting-started/: installation.md  quickstart.md
docs/source/guides/: architecture.md  cli.md  configuration.md  outputs.md
docs/source/reference/: api.md  index.md  python-api.md
docs/source/tutorials/: external-tools-dry-run.md  index.md  minimal-local-run.md  public-schizophrenia.md  real-paths.md
scripts/: build_docs.py  build_sphinx_docs.py  prepare_public_schizophrenia_example.py  run_public_schizophrenia_example.py
src/trait2gene/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/trait2gene/config/: __init__.py  defaults.py  loader.py  models.py
src/trait2gene/data/: __init__.py
src/trait2gene/data/examples/: __init__.py  config.minimal.yaml  config.precomputed.template.yaml  config.realpaths.template.yaml  sumstats.example.tsv
src/trait2gene/data/manifests/: __init__.py  features.default.yaml  resources.default.yaml
src/trait2gene/domain/: __init__.py  genes.py  loci.py  qc.py  ranking.py
src/trait2gene/engine/: __init__.py  plan.py  provenance.py  runner.py  shell.py
src/trait2gene/examples/: __init__.py  public_schizophrenia.py
src/trait2gene/io/: __init__.py  annotations.py  features.py  magma.py  outputs.py  sumstats.py
src/trait2gene/report/: __init__.py  html.py  plots.py  tables.py
src/trait2gene/report/templates/: __init__.py  report.html.j2  styles.css
src/trait2gene/resources/: __init__.py  cache.py  manifest.py  resolver.py  schemas.py
src/trait2gene/workflows/: __init__.py  doctor.py  feature_stage.py  magma_stage.py  pops_stage.py  prepare.py  prioritize_stage.py  report_stage.py  validate.py
tests/: test_cli.py  test_config.py  test_pipeline_integration.py  test_pops_stage.py  test_prioritization.py  test_public_example.py  test_vendor_pops.py
tests/fixtures/: gene_annot.tsv  minimal_config.yaml  sumstats.tsv
