[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "trait2gene"
version = "0.1.0"
description = "Minimal Python package for validating and materializing compact trait-to-gene run plans."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dai" }]
dependencies = []
keywords = ["genomics", "gwas", "trait2gene", "pipeline", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.11.0"]
docs = ["sphinx>=8.0.0", "myst-parser>=4.0.0", "furo>=2024.8.6"]

[project.urls]
Homepage = "https://github.com/dai540/trait2gene"
Documentation = "https://dai540.github.io/trait2gene/"
Repository = "https://github.com/dai540/trait2gene"
Issues = "https://github.com/dai540/trait2gene/issues"

[project.scripts]
trait2gene = "trait2gene.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trait2gene"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

